--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
@@ -1,205 +1,204 @@
-<div class="ui top centered attached header segment"
-      style="background: #1e83db;color: white">
-  <span>ใบรับมอบและส่งมอบบัญชี และเอกสาร</span>
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>ใบรับมอบและส่งมอบบัญชี และเอกสาร</span>
 </div>
 
 <div class="ui attached segment">
     <div class="ui grid">
-      <div class="ui two wide column">&nbsp;</div>
-      <div class="ui twelve wide column">
-          <div class="ui form">
+        <div class="ui two wide column">&nbsp;</div>
+        <div class="ui twelve wide column">
+            <div class="ui form">
 
-            <div class="inline fields">
-              <div class="eight wide field">
-                  &nbsp;
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
-                <div class="ui calendar" style="width:100%" id="begin_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        &nbsp;
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
+                        <div class="ui calendar" style="width:100%" id="begin_date">
+                            <div class="ui input left icon">
+                                <i class="calendar icon"></i>
+                                <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 17% !important;">เขียนที่ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 21% !important;">ตำแหน่ง : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <label class="custom-label-w-18" style="width: 64% !important;">ผู้รับบัญชีและเอกสาร ของผู้มีหน้าที่เสียภาษีราย : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ได้ให้การต่อ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="ten wide field">
-                <div style="width: 28%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>โรงอุตสาหกรรม&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 17% !important;">เขียนที่ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 21% !important;">ตำแหน่ง : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
                 </div>
-                <div style="width: 25%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>สถานบริการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <label class="custom-label-w-18" style="width: 64% !important;">ผู้รับบัญชีและเอกสาร ของผู้มีหน้าที่เสียภาษีราย : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
                 </div>
-                <div style="width: 32%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>สถานประกอบการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ได้ให้การต่อ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="ten wide field">
+                        <div style="width: 28%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>โรงอุตสาหกรรม&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div style="width: 25%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>สถานบริการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div style="width: 32%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>สถานประกอบการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <label class="custom-label-w-20">ตั้งอยู่เลขที่ :</label>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <textarea rows="3" style="width: 100%; resize: none"></textarea>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ผู้ส่งมอบ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="ten wide field">
-                <div style="width: 15%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>เจ้าของ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <label class="custom-label-w-20">ตั้งอยู่เลขที่ :</label>
+                    </div>
                 </div>
-                <div style="width: 30%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>กรรมการผู้จัดการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <textarea rows="3" style="width: 100%; resize: none"></textarea>
+                    </div>
                 </div>
-                <div style="width: 18%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>หุ้นส่วน&nbsp;&nbsp;&nbsp;&nbsp;</label>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ผู้ส่งมอบ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="ten wide field">
+                        <div style="width: 15%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>เจ้าของ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div style="width: 30%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>กรรมการผู้จัดการ&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div style="width: 18%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>หุ้นส่วน&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                        <div style="width: 26%" class="ui checkbox">
+                            <input type="checkbox">
+                            <label>อื่น ๆ .............&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                        </div>
+                    </div>
                 </div>
-                <div style="width: 26%" class="ui checkbox">
-                  <input type="checkbox">
-                  <label>อื่น ๆ .............&nbsp;&nbsp;&nbsp;&nbsp;</label>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ตามหนังสือ : </label>
+                        <input type="text" width="100%">
+                    </div>
+                    <div class="one wide field">
+                        <p>ที่ : </p>
+                    </div>
+                    <div class="two wide field">
+                        <input type="text">
+                    </div>
+                    <div class="one wide field" style="padding-left: 14px;">
+                        <p>/</p>
+                    </div>
+                    <div class="two wide field">
+                        <input type="text">
+                    </div>
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ลงวันที่ : </label>
+                        <input type="text" width="100%">
+                    </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ตามหนังสือ : </label>
-                <input type="text" width="100%">
-              </div>
-              <div class="one wide field">
-                <p>ที่ : </p>
-              </div>
-              <div class="two wide field">
-                  <input type="text">
-              </div>
-              <div class="one wide field" style="padding-left: 14px;">
-                  <p>/</p>
-              </div>
-              <div class="two wide field">
-                  <input type="text">
-              </div>
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ลงวันที่ : </label>
-                <input type="text" width="100%">
-              </div>
-            </div>
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <label class="custom-label-w-18" style="width: 30% !important;">รายละเอียด ดังนี้ : </label>
+                    </div>
+                </div>
 
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <label class="custom-label-w-18" style="width: 30% !important;">รายละเอียด ดังนี้ : </label>
-              </div>
-            </div>
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <table class="ui celled padded table">
+                            <thead>
+                                <tr>
+                                    <th class="single line">ลำดับ</th>
+                                    <th>รายการ</th>
+                                    <th>จำนวน</th>
+                                    <th>หมายเหตุ</th>
+                                    <th>#</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let number of numbers; let i = index">
+                                    <td>{{i+1}}</td>
+                                    <td><input type="text" name="" id=""></td>
+                                    <td><input type="text" name="" id=""></td>
+                                    <td><input type="text" name="" id=""></td>
+                                    <td style="cursor: pointer">
+                                        <a (click)="onDelField(i)" style="text-decoration: none;color: red" *ngIf="(i+1) > 3">ลบ</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <table class="ui celled padded table">
-                    <thead>
-                      <tr>
-                        <th class="single line">ลำดับ</th>
-                        <th>รายการ</th>
-                        <th>จำนวน</th>
-                        <th>หมายเหตุ</th>
-                        <th>#</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let number of numbers; let i = index">
-                        <td>{{i+1}}</td>
-                        <td><input type="text" name="" id=""></td>
-                        <td><input type="text" name="" id=""></td>
-                        <td><input type="text" name="" id=""></td>
-                        <td style="cursor: pointer" (click)="onDelField(i)">
-                          <a style="text-decoration: none;color: red" *ngIf="(i+1) > 3">ลบ</a>
-                        </td>
-                      </tr>
-                    </tbody>
-                </table>
-              </div>
-            </div>
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <a (click)="onAddField()" style="cursor: pointer"><i class="plus icon"></i> เพิ่ม</a>
+                    </div>
+                </div>
 
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <a (click)="onAddField()" style="cursor: pointer"><i class="plus icon"></i> เพิ่ม</a>
-              </div>
-            </div>
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 36% !important;">ผู้มอบอำนาจ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 22% !important;">พยานที่ ๑ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
 
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 36% !important;">ผู้มอบอำนาจ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 22% !important;">พยานที่ ๑ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        &nbsp;
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 22% !important;">พยานที่ ๒ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
 
-            <div class="inline fields">
-              <div class="eight wide field">
-                  &nbsp;
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 22% !important;">พยานที่ ๒ : </label>
-                <input type="text" style="width: 100%">
-              </div>
             </div>
-
-          </div>
-      </div>
-      <div class="ui two wide column">&nbsp;</div>
+        </div>
+        <div class="ui two wide column">&nbsp;</div>
     </div>
 </div>
 
 <div class="ui bottom centered attached segment">
-  <div class="ui center aligned grid">
-      <div class="eight wide column">
-        <button class="ui mini green button" type="button">
+    <div class="ui center aligned grid">
+        <div class="eight wide column">
+            <button class="ui mini green button" type="button">
           <i class="save icon"></i>
           พิมพ์เอกสาร
         </button>
-        <button class="ui mini red button" type="button" (click)="onDiscard()">
+            <button class="ui mini red button" type="button" (click)="onDiscard()">
           <i class="times icon"></i>
           ยกเลิก
         </button>
+        </div>
     </div>
-  </div>
 </div>
