--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -90,11 +90,19 @@
     <app-ts01-13 *ngIf="sent && selectedTop == 'ตส. 01-13'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-13>
 
+    <app-ts01-14 *ngIf="sent && selectedTop == 'ตส. 01-14'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-14>
+
     <app-ts01-14-1 *ngIf="sent && selectedTop == 'ตส. 01-14/1'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-14-1>
 
     <app-ts01-14 *ngIf="sent && selectedTop == 'ตส. 01-14'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-14>
+    <app-ts01-14-2 *ngIf="sent && selectedTop == 'ตส. 01-14/2'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-14-2>
+
+    <app-ts01-17 *ngIf="sent && selectedTop == 'ตส. 01-17'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-17>
 
     <app-ts01-15 *ngIf="sent && selectedTop == 'ตส. 01-15'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-15>
