--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
@@ -2,19 +2,28 @@
   <span>บันทึกผลการวิเคราะการชำระภาษีสรรพสามิต</span>
 </div>
 
-<div class="ui attached   segment">
-  <div class="ui grid">
+<div class="ui attached  segment">
+  <div class="ui grid center aligned">
     <div class="ui two wide column">&nbsp;</div>
-    <div class="ui center aligned twelve wide column">
-      <div class="ui form">
+    <div class="ui center aligned twelve wide  column">
+      <div class="ui form center aligned  ">
 
         <div class="inline fields">
-          <div class="two wide field">
+          <div class="four wide field">
+            <label>ทะเบียนสรรพสามิตเลขที่ :</label>
+          </div>
+          <div class="nine wide field">
+            <input type="text">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field">
             <label>
               ราย :
             </label>
           </div>
-          <div class="four wide field">
+          <div class="five wide field">
             <input type="text" class="disabled">
           </div>
           <div class="three wide field">
@@ -27,21 +36,16 @@
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="four wide field">
-            <label>ทะเบียนสรรพสามิตเลขที่ :</label>
-          </div>
-          <div class="nine wide field">
-            <input type="text">
-          </div>
-        </div>
+      
 
         <div class="inline fields">
-          <div class="two wide field">
+          <div class="one wide field">
             <label>ที่อยู่ :</label>
           </div>
-          <div class="eleven wide field">
-            <input type="text" class="disabled">
+          </div>
+          <div class="inline fields">
+          <div class="thirteen wide field">
+           <textarea name="" id="" rows="2" style="resize: none" maxLength="200"></textarea>
           </div>
         </div>
 
@@ -80,24 +84,25 @@
               disabled
               *ngIf="i<=2"
               style="width:16%;box-shadow: none; cursor: default; color: transparent !important; box-shadow: 0 0 0 1px transparent inset!important;">
-              <i class="times icon"></i> ลบเงื่อนไข
+              <i class="times icon"></i> ลบ
             </a>
             <a *ngIf="i>2"
               class="red"
               (click)="onDelField(i)"
               style="width:16%;box-shadow: none; color: red !important; box-shadow: 0 0 0 1px transparent inset!important;cursor:pointer">
-              <i class="times icon"></i> ลบเงื่อนไข
+              <i class="times icon"></i> ลบ
             </a>
           </div>
         </div>
 
         <div class="inline fields">
           <div class="sixteen wide field">
+              <i class="plus icon"></i>
             <a
               style="cursor: pointer"
               class="{{ numbers.length == 5 && 'disabled'}} red"
               (click)="onAddField()">
-                <i class="plus icon"></i> เพิ่มเงื่อนไข
+                 เพิ่ม
               </a>
           </div>
         </div>
@@ -118,9 +123,9 @@
           </div>
         </div>
         <div class="inline fields">
-          <div class="fourteen wide field">
-            <textarea rows="4" style="width: 92%; resize: none"></textarea>
-          </div>
+          <div class="thirteen wide field">
+            <textarea name="" id=""   rows="2" style="resize: none;" maxLength="200" ></textarea>
+           </div>
         </div>
 
         <div class="inline fields">
@@ -131,10 +136,10 @@
               <label>ขออนุมัติหนังสือเรียก</label>
             </div>
           </div>
-          <div class="three wide field">
+          <div class="one wide field">
             <label>อื่นๆ:</label>
           </div>
-          <div class="four wide field">
+          <div class="six wide field">
             <input type="text">
           </div>
         </div>
@@ -142,7 +147,7 @@
         <div class="inline fields">
           <div class="two wide field">
             <label>
-              ผู้วิเคราะห์ :
+              ผู้วิเคราะห์:
             </label>
           </div>
           <div class="four wide field">
@@ -157,12 +162,12 @@
             <input type="text">
           </div>
         </div>
-
       </div>
     </div>
     <div class="ui two wide column">&nbsp;</div>
   </div>
 </div>
+
 
 <div class="ui bottom centered attached segment">
   <div class="ui center aligned grid">
@@ -178,3 +183,4 @@
     </div>
   </div>
 </div>
+
